@@ -91,14 +91,15 @@ div#top		{ width: 200px; margin-left: auto; margin-right: auto; text-align:cente
 .emphasis	{ font-weight: bold;
 		}
 
-.attention	{ font-weight:bold; color:red ;
+.attention	{ font-size: 1.1em; font-weight:bold; 
+		  color:red ;
 		}
 
 a:link		{ color: #000099;
 		}
 
 a:visited,
-a:hover		{ color: #C61F1B;
+a:hover		{ color: #409D27;
 		}
 
 .tab 		{  border-style:solid; border-width:1px;border-color: black;
