@@ -39,10 +39,11 @@
 </div>
 
 <p align="center">
-	<input type="submit" name="go_back" disabled="disabled" value="<- <?php echo _("Previous Step") ?>">
-	<input type="submit" name="go_next" disabled="disabled" value="<?php echo _("Next Step") ?> ->">
-	<input type="submit" name="go_defaults" disabled="disabled" value="<?php echo _("Use Defaults") ?>">
-
+	<input type="submit" name="go_back" disabled="disabled" value="<-- <?php echo _("Previous Step") ?>">
+        <input type="button" name="go_backTab" value="<- <?php echo _("Previous Tab") ?>" onClick="section_tabs.prevTab()">
+        <input type="button" name="go_nextTab" value="<?php echo _("Next Tab") ?> ->" onClick="section_tabs.nextTab()">
+        <input type="submit" name="go_next" disabled="disabled" value="<?php echo _("Next Step") ?> -->">
+        <input type="submit" name="go_defaults" disabled="disabled" value="<?php echo _("Use Defaults") ?>">
 </p>
 <?php
 	makeSectionTabs($constants);
@@ -148,7 +149,9 @@ foreach ($constants as $key => $val) {
 }
 ?>
 <p align="center">
-	<input type=submit name="go_back" disabled="disabled" value="<- <?php echo _("Previous Step") ?>">
-	<input type=submit name="go_next" disabled="disabled" value="<?php echo _("Next Step") ?> ->">
-	<input type=submit name="go_defaults" disabled="disabled" value="<?php echo _("Use Defaults") ?>">
+	<input type="submit" name="go_back" disabled="disabled" value="<-- <?php echo _("Previous Step") ?>">
+        <input type="button" name="go_backTab" value="<- <?php echo _("Previous Tab") ?>" onClick="section_tabs.prevTab()">
+        <input type="button" name="go_nextTab" value="<?php echo _("Next Tab") ?> ->" onClick="section_tabs.nextTab()">
+        <input type="submit" name="go_next" disabled="disabled" value="<?php echo _("Next Step") ?> -->">
+        <input type="submit" name="go_defaults" disabled="disabled" value="<?php echo _("Use Defaults") ?>">
 </p>
