@@ -1,3 +1,12 @@
+2004-06-07 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b180
+
+	* New: Added Previous and Next Tab Javascrit in ConfigWizard
+
+	* Change: CSS in Config and Jensskin
+
+	* Change: Text when Gallery is unconfigured
+
+
 2004-06-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b179
 
 	* Change: Remove two references to configure_instructions.php
